--- a/.github/workflows/interop.yml
+++ b/.github/workflows/interop.yml
@@ -1,9 +1,6 @@
 name: interop
 on:
-  schedule:
-   # Every 8h, at 15 minutes past the hour
-   # This makes sure that the cleanup cron job can run first.
-  - cron: "15 */8 * * *"
+  workflow_dispatch:
 
 jobs:
   config:
@@ -53,28 +50,28 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        image: [ 'quic-network-simulator', 'quic-interop-iperf-endpoint' ]
+        image: ["quic-network-simulator", "quic-interop-iperf-endpoint"]
     steps:
-    - uses: actions/checkout@v6
-    - name: Pull
-      run: |
-        URL="martenseemann/${{ matrix.image }}"
-        docker pull $URL
-        echo "URL=$URL" >> $GITHUB_ENV
-    - name: Docker inspect
-      run: docker image inspect $URL
-    - name: Save Docker image
-      run: |
-        docker save $URL | gzip --best > ${{ matrix.image }}.tar.gz
-        du -sh ${{ matrix.image }}.tar.gz
-    - name: Upload result
-      uses: actions/upload-artifact@v5
-      with:
-        name: images-${{ matrix.image }}
-        path: ${{ matrix.image }}.tar.gz
-        if-no-files-found: error
+      - uses: actions/checkout@v6
+      - name: Pull
+        run: |
+          URL="martenseemann/${{ matrix.image }}"
+          docker pull $URL
+          echo "URL=$URL" >> $GITHUB_ENV
+      - name: Docker inspect
+        run: docker image inspect $URL
+      - name: Save Docker image
+        run: |
+          docker save $URL | gzip --best > ${{ matrix.image }}.tar.gz
+          du -sh ${{ matrix.image }}.tar.gz
+      - name: Upload result
+        uses: actions/upload-artifact@v5
+        with:
+          name: images-${{ matrix.image }}
+          path: ${{ matrix.image }}.tar.gz
+          if-no-files-found: error
   docker-pull-images:
-    needs: [ config ]
+    needs: [config]
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -101,7 +98,7 @@ jobs:
           path: ${{ matrix.image }}.tar.gz
           if-no-files-found: error
   tests:
-    needs: [ config, docker-pull-tools, docker-pull-images ]
+    needs: [config, docker-pull-tools, docker-pull-images]
     runs-on: ubuntu-latest
     continue-on-error: true
     timeout-minutes: 45
@@ -192,7 +189,7 @@ jobs:
             ${{ matrix.server }}_${{ matrix.client }}_results.json
             ${{ matrix.server }}_${{ matrix.client }}_measurements.json
   aggregate:
-    needs: [ config, tests ]
+    needs: [config, tests]
     runs-on: ubuntu-latest
     if: always()
     env:
